@@ -1,5 +1,11 @@
 2002-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* input/test/stem.ly:
+	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Play with
+	beamed-lengths.
+
+	* input/test/spacing.ly: Give enough room to test spacing.
+
 	* cygwin/post-lilypond.sh: Fix and update.
 
 	* cygwin/zlily-profile.sh: Remove.
